fixed spacing in text title

--- a/rhymepaysage.com/dev/sass/uband.scss
+++ b/rhymepaysage.com/dev/sass/uband.scss
@@ -350,6 +350,7 @@ main { position: relative; }
 .text--title {
 	margin-bottom: 0;
 	padding-top: 5px;
+	line-height: 1.1;
 	@include respond-r2 {
 		padding-top: 0;
 	}
